2009-12-29  Sancho Lerena <slerena@artica.es>

	* include/Image/image_functions.php: PHP 5.2 and higher does 
	not support (deprecated) get_mimetype. Avoiding headers lets
	the browser to decide contents of stream and now this works
	on modern PHP, before not :(

	* extensions/hello: Removed sample.

	* include/functions_servers.php: Fixed notice (division by 0).

	* include/functions_visual_map.php: Fixed problem in graphs 
	embedded in the visual console maps (problem with &amp; in fgraph
	call !!?).

	* include/config_process.php: Added supression of DEPRECATED
	system messages for PHP 5.2.11 or higher insted 5.3

	* godmode/agentes/module_manager_editor_prediction.php: Fixed several
	missing fields in the prediction module edition.

2009-12-28  Sancho Lerena <slerena@artica.es>

	* module_manager_editor_common.php: Latest changes from mdtrooper break
	some code, reverted specific changes in order to work.

	* pandoradb.sql: tnetwork_component double(18,13) -> double (18,3) by
	a typo !¡¿?. That is the type for tagente_modulo.

	* includes/languages/* : Updated languages for 3.0 final release.

	* include/config_process: Fixed problems detected in system/user 
	language settings. Now use config["language"] avoiding use of old 
	token "language_code"
	
	* include/function_config.php: config["language"] is now a "stardard" 
	config token, avoding to use as special one, was giving a big headache in
	order to maintain old compatibility. Now will use config["language"] always
	and create it if doesnt exist using english as base lang.

	* pandoradb_data.sql: Token is not "language" instead "language_code"

	* godmode/setup/setup.php: Use config["language"], manage like other 
	variable in the sytem, avoiding conflicts and problems detected.

2009-12-27  Raúl Mateos  <raulofpandora@gmail.com>

	* extensions/users/menu.png, extensions/dbmanager/menu.png: New files

	* extensions/users_connected.php: Added icon and changed menu section.